--- a/src/App.css
+++ b/src/App.css
@@ -10,16 +10,19 @@
   color: black;
   text-shadow: 3px 3px 3px white;
   font-family: 'Homer Simpson Revised', sans-serif;
-  font-size: 2rem;
-}
-
-h1 {
-  font-size: .5rem;
+  font-size: 1.25rem;
 }
 
 
+.cell-container {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 
 .cell {
   border: 2px solid white;
+  border-radius: 20px;
+  margin: 20px;
+  width: 29%;
 }
