--- a/src/App.css
+++ b/src/App.css
@@ -25,18 +25,42 @@
 
 .homeIMG {
   width: 50%;
-  
+
 }
 
 
 .cell {
   border: 2px solid white;
   border-radius: 20px;
-  margin: 20px;
+  margin: 10px;
   width: 29%;
   padding: 5px;
 }
 
 .navBar {
   margin-bottom: 20px;
+}
+
+@media (max-width: 820px) {
+
+  .cell-container {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+
+.homeDiv {
+  font-size: small;
+}
+
+ .cell {
+  width: 60vw;
+ }
+
+ .navBar {
+  width: 80vw;
+  margin: 0 auto;
+  margin-bottom: 20px;
+ }
+
+
 }
